--- a/wp-content/themes/jf/src/scss/modules/_chunk.scss
+++ b/wp-content/themes/jf/src/scss/modules/_chunk.scss
@@ -62,6 +62,6 @@
 	@include breakpoint(60em) {
 		max-width: none;
 		width: span(5.5 of 12);
-		padding-bottom: 0;
+		padding: 4rem 0;
 	}
 }
