--- a/wp-content/themes/jf/src/scss/modules/_dashboard.scss
+++ b/wp-content/themes/jf/src/scss/modules/_dashboard.scss
@@ -3,18 +3,36 @@
 }
 
 .dashboard__setup {
+}
+
+.dashboard__setup__image {
+	position: relative;
+	height: 0;
+	padding-bottom: 60.4%;
+
 	svg {
+		position: absolute;
+		top: 0;
 		width: 100%;
-		height: auto;
+		height: 100%;
 	}
 }
 
 .dashboard__problems {
 	background-color: $ov-grey;
 
+}
+
+.dashbaord__problems__image {
+	position: relative;
+	height: 0;
+	padding-bottom: 71.92%;
+	
 	svg {
+		position: absolute;
+		top: 0;
 		width: 100%;
-		height: auto;
+		height: 100%;
 	}
 }
 
@@ -27,16 +45,15 @@
 }
 
 .dashboard__groundwork__logo {
-	svg {
-		width: 50%;
-		height: auto;
-		margin: 2rem auto;
-		display: block;
+	position: relative;
+	height: 0;
+	padding-bottom: 89.47%;
 
-		@include breakpoint(60rem) {
-			width: 80%;
-			float: right;
-		}
+	svg {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
 
 		.js & {
 			path {
@@ -156,8 +173,9 @@
 }
 
 .dashboard__bonus {
-	background: $ov-teal;
-	background: #D0021B;
+	// background: $ov-teal;
+	// background: #D0021B;
+	background: $ov-grey;
 
 	.chunk__secondary {
 		padding-bottom: 0;
